# osm2pg-rs

./: Cargo.toml  build.rs
protos/: fileformat.proto
src/: main.rs
src/protos/: fileformat.rs  osmformat.rs
