[package]
name = "osm2pg"
version = "0.1.0"
authors = ["Jasper <jbg@rf.net.nz>"]
edition = "2018"

[dependencies]
byteorder = "1.3"
clap = "2.32"
crossbeam-channel = "0.3"
flate2 = "1.0"
geo = "0.4"
itertools = "0.8"
log = "0.4"
postgres = { version = "0.15", features = ["with-geo"] }
postgres-binary-copy = "0.5"
pretty_env_logger = "0.3"
protobuf = "2.4"
streaming-iterator = "0.1"

[build-dependencies]
protobuf-codegen-pure = "2.4"
